fixed overflow issue in mobile

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
   margin: 0;  
   min-width: 100vh;
   min-height: 100vh;  
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 
